--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -32,10 +32,11 @@
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
-				<div class="container-fluid">
-					<div class="top-nav__row row">
-						<div class="col-auto">
-							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<div class="container-wide">
+					<div class="container-fluid">
+						<div class="top-nav__row row">
+							<div class="col-auto">
+								<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_2312_2263)">
 <rect width="48" height="48" fill="#FFD747"/>
 <path d="M43.0703 2.33496H5.05953C3.50277 2.33496 2.33521 3.50253 2.33521 5.05929V43.0701C2.33521 44.6269 3.50277 45.7944 5.05953 45.7944H43.0703C44.6271 45.7944 45.7947 44.6269 45.7947 43.0701V5.05929C45.7947 3.50253 44.4974 2.33496 43.0703 2.33496Z" fill="#FFD747"/>
@@ -48,83 +49,84 @@
 </clipPath>
 </defs>
 </svg>
-							</a>
-						</div>
-						<div class="col">
-							<div class="menu-mobile menu-mobile--js">
-								<div class="menu-mobile__inner">
-									<div class="top-nav__row-mobile row">
-										<div class="col-lg-auto">
-											<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
-											</ul>
-										</div>
-										<div class="col-lg order-lg-0 order-last">
-											<div class="search-block">
-												<div class="search-block__btn search-block__btn--show search-block__btn--js d-none d-lg-block">
-													<svg class="icon icon-search2 ">
-														<use xlink:href="img/svg/sprite.svg#search2"></use>
-													</svg>
-												</div>
-												<div class="search-block__hidden-block">
-													<form>
-														<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
-														</div>
-														<!-- +e.input-wrap-->
-														<button class="search-block__btn d-lg-none" type="submit">
-															<svg class="icon icon-search2 ">
-																<use xlink:href="img/svg/sprite.svg#search2"></use>
-															</svg>
-														</button>
-													</form>
-													<div class="search-block__btn search-block__btn--close search-block__btn--js d-none d-lg-block">
-														<svg class="icon icon-close ">
-															<use xlink:href="img/svg/sprite.svg#close"></use>
+								</a>
+							</div>
+							<div class="col">
+								<div class="menu-mobile menu-mobile--js">
+									<div class="menu-mobile__inner">
+										<div class="top-nav__row-mobile row">
+											<div class="col-lg-auto">
+												<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
+													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
+													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
+													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
+													<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+												</ul>
+											</div>
+											<div class="col-lg order-lg-0 order-last">
+												<div class="search-block">
+													<div class="search-block__btn search-block__btn--show search-block__btn--js d-none d-lg-block">
+														<svg class="icon icon-search2 ">
+															<use xlink:href="img/svg/sprite.svg#search2"></use>
 														</svg>
+													</div>
+													<div class="search-block__hidden-block">
+														<form>
+															<div class="search-block__input-wrap form-group"><input class="search-block__input form-control" name="text" type="text" placeholder="Поиск"/>
+															</div>
+															<!-- +e.input-wrap-->
+															<button class="search-block__btn d-lg-none" type="submit">
+																<svg class="icon icon-search2 ">
+																	<use xlink:href="img/svg/sprite.svg#search2"></use>
+																</svg>
+															</button>
+														</form>
+														<div class="search-block__btn search-block__btn--close search-block__btn--js d-none d-lg-block">
+															<svg class="icon icon-close ">
+																<use xlink:href="img/svg/sprite.svg#close"></use>
+															</svg>
+														</div>
 													</div>
 												</div>
 											</div>
-										</div>
-										<div class="top-nav__col-mail col-lg-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a>
-										</div>
-										<div class="col-lg-auto order-lg-last">
-											<a class="top-nav__btn" href="#" data-src="#submit-request" data-fancybox="modal">Оставить заявку
-											</a>
-										</div>
-										<div class="col-lg-auto">
-											<div class="soc">
-												<a class="soc__item" href="#" target="_blank">
-													<svg class="icon icon-youtube ">
-														<use xlink:href="img/svg/sprite.svg#youtube"></use>
-													</svg>
+											<div class="top-nav__col-mail col-lg-auto"><a href="mailto:info@ddvb.ru">info@ddvb.ru </a>
+											</div>
+											<div class="col-lg-auto order-lg-last">
+												<a class="top-nav__btn" href="#" data-src="#submit-request" data-fancybox="modal">Оставить заявку
 												</a>
-												<a class="soc__item" href="#" target="_blank">
-													<svg class="icon icon-instagram2 ">
-														<use xlink:href="img/svg/sprite.svg#instagram2"></use>
-													</svg>
-												</a>
-												<a class="soc__item" href="#" target="_blank">
-													<svg class="icon icon-facebook ">
-														<use xlink:href="img/svg/sprite.svg#facebook"></use>
-													</svg>
-												</a>
-												<a class="soc__item" href="#" target="_blank">
-													<svg class="icon icon-behance ">
-														<use xlink:href="img/svg/sprite.svg#behance"></use>
-													</svg>
-												</a>
+											</div>
+											<div class="col-lg-auto">
+												<div class="soc">
+													<a class="soc__item" href="#" target="_blank">
+														<svg class="icon icon-youtube ">
+															<use xlink:href="img/svg/sprite.svg#youtube"></use>
+														</svg>
+													</a>
+													<a class="soc__item" href="#" target="_blank">
+														<svg class="icon icon-instagram2 ">
+															<use xlink:href="img/svg/sprite.svg#instagram2"></use>
+														</svg>
+													</a>
+													<a class="soc__item" href="#" target="_blank">
+														<svg class="icon icon-facebook ">
+															<use xlink:href="img/svg/sprite.svg#facebook"></use>
+														</svg>
+													</a>
+													<a class="soc__item" href="#" target="_blank">
+														<svg class="icon icon-behance ">
+															<use xlink:href="img/svg/sprite.svg#behance"></use>
+														</svg>
+													</a>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="col-auto d-lg-none">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+							<div class="col-auto d-lg-none">
+								<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -133,51 +135,63 @@
 			<!-- end top-nav-->
 			<div class="main-slider main-slider--js swiper swiper--service">
 				<div class="swiper-wrapper">
-					<div class="main-slider__slide swiper-slide bg-wrap">
-						<picture class="picture-bg">
-							<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-							<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
-						</picture>
-						<div class="container">
-							<div class="main-slider__text-wrap">
-								<h1>Bakerton. Детское питание Сады Придонья: Расширение линейки</h1>
-								<p>Потребительский брендинг</p>
+					<div class="main-slider__slide swiper-slide">
+						<div class="main-slider__bg bg-wrap">
+							<picture class="picture-bg">
+								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
+							</picture>
+						</div>
+						<div class="main-slider__inner">
+							<div class="container">
+								<div class="main-slider__text-wrap">
+									<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+									<p>Потребительский брендинг</p>
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="main-slider__slide swiper-slide bg-wrap">
-						<picture class="picture-bg">
-							<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-							<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
-						</picture>
-						<div class="container">
-							<div class="main-slider__text-wrap">
-								<h1>Bakerton. Детское питание Сады Придонья: Расширение линейки</h1>
-								<p>Потребительский брендинг</p>
+					<div class="main-slider__slide swiper-slide">
+						<div class="main-slider__bg bg-wrap">
+							<picture class="picture-bg">
+								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
+							</picture>
+						</div>
+						<div class="main-slider__inner">
+							<div class="container">
+								<div class="main-slider__text-wrap">
+									<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+									<p>Потребительский брендинг</p>
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="main-slider__slide swiper-slide bg-wrap">
-						<picture class="picture-bg">
-							<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
-							<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
-							<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
-							<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
-						</picture>
-						<div class="container">
-							<div class="main-slider__text-wrap">
-								<h1>Bakerton. Детское питание Сады Придонья: Расширение линейки</h1>
-								<p>Потребительский брендинг</p>
+					<div class="main-slider__slide swiper-slide">
+						<div class="main-slider__bg bg-wrap">
+							<picture class="picture-bg">
+								<source type="image/avif" srcset="img/@2x/avif/slide-lg-2.avif" media="(min-width:576px)"/>
+								<source type="image/avif" srcset="img/@2x/avif/slide-sm-2.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-lg-2.webp" media="(min-width:576px)"/>
+								<source type="image/webp" srcset="img/@2x/webp/slide-sm-2.webp"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-lg-2.jpg" media="(min-width:576px)"/>
+								<source type="image/jpg" srcset="img/@2x/avif/slide-sm-2.jpg"/><img class="object-fit-js" src="img/@2x/slide-lg-2.jpg" alt="" loading="lazy"/>
+							</picture>
+						</div>
+						<div class="main-slider__inner">
+							<div class="container">
+								<div class="main-slider__text-wrap">
+									<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+									<p>Потребительский брендинг</p>
+								</div>
 							</div>
 						</div>
 					</div>
