--- a/public/09-about-company.html
+++ b/public/09-about-company.html
@@ -25,6 +25,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
 		<link href="libs/swiper/swiper.min.css" rel="stylesheet"/>
+		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/animate.css/animate.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
@@ -151,7 +152,7 @@
 							<div class="col-lg-6">
 								<div class="head-wrapper__slider head-wrapper__slider--js swiper">
 									<div class="swiper-wrapper">
-										<div class="head-wrapper__slide swiper-slide wow animate__animated animate__fadeIn animate__infinite animate__slower-6s">
+										<div class="head-wrapper__slide swiper-slide">
 											<!-- picture-->
 											<picture> 
 												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
@@ -159,19 +160,19 @@
 											</picture>
 											<!-- /picture-->
 										</div>
-										<div class="head-wrapper__slide swiper-slide wow animate__animated animate__fadeIn animate__infinite animate__slower-6s">
+										<div class="head-wrapper__slide swiper-slide">
 											<!-- picture-->
 											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+												<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-2.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-2.webp"/><img src="img/@2x/ourSpec-card-bg-2.jpg" alt="" loading="lazy"/>
 											</picture>
 											<!-- /picture-->
 										</div>
-										<div class="head-wrapper__slide swiper-slide wow animate__animated animate__fadeIn animate__infinite animate__slower-6s">
+										<div class="head-wrapper__slide swiper-slide">
 											<!-- picture-->
 											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
+												<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-1.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-1.webp"/><img src="img/@2x/ourSpec-card-bg-1.jpg" alt="" loading="lazy"/>
 											</picture>
 											<!-- /picture-->
 										</div>
@@ -536,7 +537,7 @@
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
-		<script src="libs/swiper/swiper-bundle.min.js"> </script>
+		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
 		<script src="libs/wowjs/wow.min.js"></script>
 		<script src="js/common.js"></script>
