--- a/public/09-about-company.html
+++ b/public/09-about-company.html
@@ -160,19 +160,19 @@
 											</picture>
 											<!-- /picture-->
 										</div>
-										<div class="head-wrapper__slide swiper-slide">
+										<div class="head-wrapper__slide swiper-slide" style="true">
 											<!-- picture-->
 											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-2.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-2.webp"/><img src="img/@2x/ourSpec-card-bg-2.jpg" alt="" loading="lazy"/>
+												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
 											</picture>
 											<!-- /picture-->
 										</div>
 										<div class="head-wrapper__slide swiper-slide">
 											<!-- picture-->
 											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-1.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-1.webp"/><img src="img/@2x/ourSpec-card-bg-1.jpg" alt="" loading="lazy"/>
+												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
+												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
 											</picture>
 											<!-- /picture-->
 										</div>
