--- a/public/18-contentPage.html
+++ b/public/18-contentPage.html
@@ -301,8 +301,8 @@
 								</svg>
 							</a>
 							<a class="soc__item" href="#" target="_blank">
-								<svg class="icon icon-facebook-stroke ">
-									<use xlink:href="img/svg/sprite.svg#facebook-stroke"></use>
+								<svg class="icon icon-facebook ">
+									<use xlink:href="img/svg/sprite.svg#facebook"></use>
 								</svg>
 							</a>
 							<a class="soc__item" href="#" target="_blank">
@@ -338,13 +338,13 @@
 							<ul class="footer__menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
 								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a>
 								</li>
-								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a>
-								</li>
-								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a>
-								</li>
 								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a>
 								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a>
+								</li>
 								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a>
 								</li>
 								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Eng</a>
 								</li>
