add 14-search-4 page-404 and several edits

--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -211,16 +211,16 @@
 									</a>
 								</li>
 								<li class="services-list__item">
-									<a class="services-list__link" href="#">Задача
+									<a class="services-list__link" href="#">Корпоративный брендинг
 									</a>
 								</li>
 								<li class="services-list__item">
-									<a class="services-list__link" href="#">Решение
+									<a class="services-list__link" href="#">Продвижение
 									</a>
 								</li>
 							</ul>
 						</div>
-						<div class="col-desc col-12">
+						<div class="col-12">
 							<p class="services-description-text">Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста
 							</p>
 						</div>
@@ -231,7 +231,7 @@
 										<div class="col">
 											<div class="dd-group__wrraper">
 												<h4>Ситуация</h4>
-												<p>Корпоративная социальная программа &laquo;Вместе&raquo; реализуется Металлоинвестом и&nbsp;направлена на&nbsp;создание условий для развития регионов присутствия.</p>
+												<p>Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  </p>
 											</div>
 										</div>
 										<div class="col-auto">
@@ -247,8 +247,8 @@
 									<div class="dd-group__row row">
 										<div class="col">
 											<div class="dd-group__wrraper">
-												<h4>Ситуация</h4>
-												<p>Разработать архитектуру и&nbsp;гибкую систему визуальной коммуникации для разных типов носителей. В&nbsp;едином фирменном стиле дифференцировать</p>
+												<h4>Задача</h4>
+												<p>Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать</p>
 											</div>
 										</div>
 										<div class="col-auto">
@@ -264,7 +264,7 @@
 									<div class="dd-group__row row">
 										<div class="col">
 											<div class="dd-group__wrraper">
-												<h4>Ситуация</h4>
+												<h4>Решение</h4>
 												<p>&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;</p>
 											</div>
 										</div>
@@ -396,7 +396,7 @@
 			<div class="sServiceHead section sServiceHead sServiceHead--for-what">
 				<div class="container">
 					<div class="row">
-						<div class="col-desc col-12">
+						<div class="col-12">
 							<p class="services-description-text">Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо. Мы&nbsp;предусмотрели и&nbsp;расширение числа иллюстраций программы и&nbsp;прописали в&nbsp;гайде требования к&nbsp;их&nbsp;разработке, чтобы любая инициатива могла быть ярко обозначена на&nbsp;любом носителе.
 							</p>
 						</div>
@@ -607,7 +607,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -669,7 +669,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
