--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -144,7 +144,7 @@
 			<div class="sServiceHead section">
 				<div class="container">
 					<div class="row">
-						<div class="col-desc col-12">
+						<div class="col-12">
 							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
 							</p>
 						</div>
@@ -174,7 +174,7 @@
 						</div>
 						<div class="col-12"> 
 							<div class="dd-group dd-group-js">
-								<div class="dd-group__item">
+								<div class="dd-group__item dd-group__item--service">
 									<div class="dd-group__head dd-head-js">
 										<div class="dd-group__row row">
 											<div class="col">
@@ -411,7 +411,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -473,7 +473,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
