--- a/public/08-portfolio.html
+++ b/public/08-portfolio.html
@@ -30,7 +30,7 @@
 		<link href="libs/animate.css/animate.min.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body>
+	<body class="portfolio">
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
@@ -391,10 +391,7 @@
 								<!-- /picture-->
 							</div>
 						</div>
-					</div><a class="btn-more" href="#">
-						<svg class="icon icon-chevron-right-btn ">
-							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
-						</svg><span>Портфолио по стратегии</span></a>
+					</div>
 					<div class="spinner">
 					</div>
 				</div>
@@ -482,7 +479,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -544,7 +541,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
