--- a/public/09-about-company-2.html
+++ b/public/09-about-company-2.html
@@ -427,7 +427,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -489,7 +489,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
