--- a/public/14-search-2.html
+++ b/public/14-search-2.html
@@ -155,8 +155,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -170,8 +168,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -185,8 +181,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">3
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -200,8 +194,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search text-white">
 								<div class="cardWrrap__content">
 									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">4
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -215,8 +207,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -230,8 +220,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">6
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -245,8 +233,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">3
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -260,8 +246,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Корпоративный брендинг</span>
-									<button class="cardWrrap__btn">2
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -275,8 +259,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -290,8 +272,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -305,8 +285,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search text-white">
 								<div class="cardWrrap__content">
 									<h2>Valio. Выбери цвет настроения!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">4
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -320,8 +298,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">3
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -335,8 +311,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">2
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -350,8 +324,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">6
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -365,8 +337,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">3
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -380,8 +350,6 @@
 							<div class="cardWrrap cardWrrap--horizontal cardWrrap--search">
 								<div class="cardWrrap__content">
 									<h2>Bakerton. Это вам&nbsp;&mdash; Nemoloko!</h2><span>Продвижение, Стратегия</span>
-									<button class="cardWrrap__btn">1
-									</button>
 								</div>
 								<!-- picture-->
 								<picture> 
@@ -479,7 +447,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -541,7 +509,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
