--- a/public/11-1-team-2.html
+++ b/public/11-1-team-2.html
@@ -396,7 +396,7 @@
 						<!-- +e.input-wrap-->
 						<button class="form-wrap__btn btn" type="submit"> 
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
@@ -458,7 +458,7 @@
 						</div>
 						<button class="form-wrap__btn btn" type="submit">Оставить заявку
 						</button>
-						<div class="form-wrap__policy d-block d-lg-none"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
+						<div class="form-wrap__policy"><small class="form-wrap__text">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь <a href="#">с политикой конфиденциальности</a></small>
 						</div>
 					</form>
 				</div>
