--- a/public/14-search-4.html
+++ b/public/14-search-4.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>О компании</title>
+		<title>Результаты поиска по тегу «Корпоративный стиль»</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -137,252 +137,138 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
-					<h1>О компании</h1>
+					<h1>Результаты поиска по тегу «Корпоративный стиль»</h1>
 				</div>
 			</div>
-			<!-- start sHistory-->
-			<div class="sHistory section" id="sHistory">
+			<div class="form-block">
 				<div class="container">
-					<div class="head-wrapper">
-						<div class="row"> 
-							<div class="head-wrapper__col col-lg-6">
-								<h2>Придаём брендам человеческое лицо,</h2>
-								<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
-							</div>
-							<div class="col-lg-6">
-								<div class="head-wrapper__slider head-wrapper__slider--js swiper">
-									<div class="swiper-wrapper">
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
+					<form class="form-block__search">
+						<div class="form-block__input-wrap form-group"><input class="form-block__input form-control" name="text" type="text" placeholder="Поиск"/>
+						</div>
+						<!-- +e.input-wrap-->
+						<button> 
+							<svg class="icon icon-search ">
+								<use xlink:href="img/svg/sprite.svg#search"></use>
+							</svg>
+						</button>
+						<p>12 результатов</p>
+					</form>
+					<ul>
+						<li>
+							<button class="active" type="button">Портфолио</button>
+						</li>
+						<li>
+							<button type="button">Новости</button>
+						</li>
+						<li>
+							<button type="button">Услуги</button>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!-- start sSearchServices-->
+			<div class="sSearchServices section" id="sSearchServices">
+				<div class="container">
+					<div class="dd-group dd-group-js">
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Продвижение</h4>
+											<p>Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
 										</div>
-										<div class="head-wrapper__slide swiper-slide" style="true">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
 									</div>
 								</div>
 							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Собираем и анализируем информацию</p>
+									</li>
+									<li>
+										<p>Формируем смысловое наполнение</p>
+									</li>
+									<li>
+										<p>Создаём структуру</p>
+									</li>
+									<li>
+										<p>Формируем принципы общения с аудиторией</p>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<p>Компания была основана в&nbsp;1993 году Леонидом Фейгиным и&nbsp;Дмитрием Перышковым в&nbsp;качестве дизайн-студии, но&nbsp;уже в&nbsp;скором времени успешно трансформировалась в&nbsp;полносервисное брендинговое агентство. Мы&nbsp;сыграли заметную роль в&nbsp;развитии индустрии брендинга в&nbsp;России, и&nbsp;продолжаем оставаться драйверами развития отрасли. На&nbsp;протяжении последних десятилетий мы&nbsp;работаем с&nbsp;лидерами российской экономики: бюджет наших клиентов формирует&nbsp;10% доходной части бюджета Российской Федерации.</p>
-					<p>Особая гордость&nbsp;&mdash; это команда, которая объединяет более 40&nbsp;сильных и&nbsp;амбициозных экспертов в&nbsp;области стратегии, дизайна и&nbsp;коммуникации. Это позволяет создавать нам разные брендинговые проекты: продуктовые, корпоративные, HR, территориальные и&nbsp;др.</p>
-					<p>DDVB входит в&nbsp;Ассоциацию брендинговых агентств России, регулярно получает призы на&nbsp;российских и&nbsp;международных фестивалях. Наши специалисты делятся опытом в&nbsp;ведущих учебных заведениях страны, входят в&nbsp;состав жюри, разрабатывают новые подходы в&nbsp;создании брендинга.</p>
-					<a class="download-link" href="#">
-						<svg class="icon icon-doc-download ">
-							<use xlink:href="img/svg/sprite.svg#doc-download"></use>
-						</svg><span>Скачать презентацию (PDF)</span>
-					</a>
-				</div>
-			</div>
-			<!-- end sHistory-->
-			<!-- start sAwards-->
-			<div class="sAwards section" id="sAwards">
-				<div class="container">
-					<h3>Награды</h3>
-					<p>DDVB насчитывает более 150 наград престижных конкурсов в&nbsp;области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также ряда публикаций в&nbsp;профильных зарубежных СМИ.</p>
-				</div>
-				<div class="container-wide">
-					<div class="container">
-						<ul class="sAwards__company-list">
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-1.webp"/><img src="img/@2x/awards-img-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-2.webp"/><img src="img/@2x/awards-img-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-3.webp"/><img src="img/@2x/awards-img-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-4.webp"/><img src="img/@2x/awards-img-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-5.webp"/><img src="img/@2x/awards-img-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-6.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-6.webp"/><img src="img/@2x/awards-img-6.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-7.webp"/><img src="img/@2x/awards-img-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-8.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-8.webp"/><img src="img/@2x/awards-img-8.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-9.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-9.webp"/><img src="img/@2x/awards-img-9.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-10.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-10.webp"/><img src="img/@2x/awards-img-10.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-11.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-11.webp"/><img src="img/@2x/awards-img-11.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-12.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-12.webp"/><img src="img/@2x/awards-img-12.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-13.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-13.webp"/><img src="img/@2x/awards-img-13.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-14.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-14.webp"/><img src="img/@2x/awards-img-14.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-15.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-15.webp"/><img src="img/@2x/awards-img-15.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-16.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-16.webp"/><img src="img/@2x/awards-img-16.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-17.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-17.webp"/><img src="img/@2x/awards-img-17.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- end sAwards-->
-			<!-- start sOurSpec-->
-			<div class="sOurSpec section" id="sOurSpec">
-				<div class="container-wide">
-					<div class="row">
-						<div class="col-sm-6">
-							<a class="sOurSpec__card" href="#">
-								<h2>Наше&nbsp;видение</h2>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-1.webp"/><img class="object-fit-js" src="img/@2x/ourSpec-card-bg-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</a>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Потребительский брендинг</h4>
+											<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем.</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Собираем и анализируем информацию</p>
+									</li>
+									<li>
+										<p>Формируем смысловое наполнение</p>
+									</li>
+									<li>
+										<p>Создаём структуру</p>
+									</li>
+									<li>
+										<p>Формируем принципы общения с аудиторией</p>
+									</li>
+								</ul>
+							</div>
 						</div>
-						<div class="col-sm-6">
-							<a class="sOurSpec__card" href="#">
-								<h2>Команда</h2>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-2.webp"/><img class="object-fit-js" src="img/@2x/ourSpec-card-bg-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</a>
-						</div>
-						<div class="col-sm-12">
-							<a class="sOurSpec__card" href="#">
-								<h2>Вакансии</h2>
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/ourSpec-card-bg-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/ourSpec-card-bg-3.webp"/><img class="object-fit-js" src="img/@2x/ourSpec-card-bg-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</a>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="dd-group__row row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Стратегия</h4>
+											<p>Мы уверены, что именно смысл является истинным преимуществом сильного бренда.  Наш подход обеспечивает взаимопонимание между бизнесом и потребителем.  </p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Собираем и анализируем информацию</p>
+									</li>
+									<li>
+										<p>Формируем смысловое наполнение</p>
+									</li>
+									<li>
+										<p>Создаём структуру</p>
+									</li>
+									<li>
+										<p>Формируем принципы общения с аудиторией</p>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
+				<div class="spinner">
+				</div>
 			</div>
-			<!-- end sOurSpec-->
+			<!-- end sSearchServices-->
 			<footer class="footer">
 				<div class="container-wide">
 					<div class="row">
